--- a/app-options-page/components/invoice/invoiceView.html
+++ b/app-options-page/components/invoice/invoiceView.html
@@ -26,7 +26,7 @@
             <div class="modal-body">
                 <div class="row">
                     <div class="col-md-5" style="padding-right: 0">
-                        <div class="invoiceId"><a href="https://trade.1688.com/order/new_step_order_detail.htm?orderId={{orderId}}" target="_blank">{{orderId}}</a></div>
+                        <!-- <div class="invoiceId"><a href="https://trade.1688.com/order/new_step_order_detail.htm?orderId={{orderId}}" target="_blank">{{orderId}}</a></div> -->
                         <div ng-show="traceNo.length>0" id="grid3" ui-grid="optionsShipping" ui-grid-resize ui-grid-resize-columns
                             ui-grid-selection ui-grid-edit ui-grid-row-edit class="grid3"></div>
                         <div class="note">
