--- a/app-options-page/components/productsList/productsList.html
+++ b/app-options-page/components/productsList/productsList.html
@@ -181,7 +181,7 @@
 
                 <input placeholder="Nhập mã đơn hàng..." type="text" name="" ng-model="invoiceId" id="invoiceId">
                 <!-- <input placeholder="Nhập mã vẫn đơn..." type="button" name="" ng-model="invoiceId" id="invoiceId"> -->
-                
+
                 <input placeholder="Phí Ship" style="width: 25%;" type="number" name="" ng-model="shipping_fee" id="shipping_fee">
                 <select class="form-control" name="" id="selectCurrence">
                     <!-- <option></option> -->
@@ -189,14 +189,17 @@
                     <option>VNĐ</option>
                     <option>USD</option>
                 </select>
-                <button ng-click="addShippingNo()" id="addShippingNo"><span class="glyphicon glyphicon-plus"></span> Mã Vận Đơn</button>
+                <button ng-click="addShippingNo()" id="addShippingNo"><span class="glyphicon glyphicon-plus"></span> Mã
+                    Vận Đơn</button>
                 <p style="    margin-right: 2px;">
                     <textarea ng-model="note" placeholder="Nhập note tại đây" class="form-control" rows="1" id="noteInvoice"></textarea>
                 </p>
                 <p ng-show="shippingNo.length > 0">
                     <ul style="list-style-type: circle;
                     padding-left: 17px;">
-                        <li style="margin-bottom: 5px;" ng-repeat="i in shippingNo">{{i.id}}<span class="timeOfShippingNo">{{i.time | date: "dd/MM/y - HH:mm"}}</span> <span class="weightOfShippingNo">{{i.weight}} (kg)</span><span title="phí ship" class="ShippingFeeOfShippingNo">{{i.shipping_fee}} (CNY)</span>  </li>
+                        <li style="margin-bottom: 5px;" ng-repeat="i in shippingNo">{{i.id}}<span class="timeOfShippingNo">{{i.time
+                                | date: "dd/MM/y - HH:mm"}}</span> <span class="weightOfShippingNo">{{i.weight}} (kg)</span><span
+                                title="phí ship" class="ShippingFeeOfShippingNo">{{i.shipping_fee}} (CNY)</span> </li>
                     </ul>
                 </p>
             </div>
@@ -253,7 +256,8 @@
                             border: #ddd solid 2px;
                             border-radius: 2px;"
                                 placeholder="GIẢM GIÁ" type="number" name="" ng-model="discount" id="">
-                        </div>
+                                
+                            </div>
 
                     </div>
                     <div id="previewCopy"></div>
@@ -265,7 +269,9 @@
                     <!-- <p class="traceno"><b>Mã vận đơn: </b>{{invoice.shipping_traceId}}</p> -->
                     <ul style="list-style-type: circle;
                     padding-left: 17px;">
-                        <li style="margin-bottom: 5px;" ng-repeat="i in invoice.shipping_traceId">{{i.id}}<span class="timeOfShippingNo">{{i.time | date: "dd/MM/y - HH:mm"}}</span> <span class="weightOfShippingNo">{{i.weight}} (kg)</span> </li>
+                        <li style="margin-bottom: 5px;" ng-repeat="i in invoice.shipping_traceId">{{i.id}}<span class="timeOfShippingNo">{{i.time
+                                | date: "dd/MM/y - HH:mm"}}</span> <span class="weightOfShippingNo">{{i.weight}} (kg)</span>
+                        </li>
                     </ul>
                     <p class="status"><b>Trạng thái: </b>{{statusInvoice}}</p>
                     <div class="totalBefore">
@@ -276,6 +282,7 @@
                         border: #ddd solid 2px;
                         border-radius: 2px;"
                             placeholder="GIẢM GIÁ" type="number" name="" ng-model="discountPre" id="discountPreview">
+                        
                     </div>
                 </div>
                 <div class="itemInvoice">
@@ -315,7 +322,7 @@
             <div class="modal-footer">
 
                 <span ng-show="!copy && !previewInv" ng-click="previewInvoice()" class="previewInvoice">PREVIEW</span>
-                <button ng-show="copy" ng-click="saveInvoiceCopy()" class="btn btn-success">SAVE</button>
+                <button ng-show="copy" ng-click="saveInvoiceCopy()" style="float: right" class="btn btn-success">SAVE</button>
                 <button ng-show="previewInv" ng-click="saveInvoice()" class="btn btn-success">ADD</button>
                 <button ng-show="previewInv" ng-click="previewInv = false" class="btn btn-danger">CANCEL</button>
             </div>
