--- a/lib/custom/content/css/custom.css
+++ b/lib/custom/content/css/custom.css
@@ -14,6 +14,19 @@ input#newName {
     border: #22222278 solid 1px;
     border-radius: 2px;
 }
+button#copy {
+    position: absolute;
+    /* display: block; */
+    z-index: 1000;
+    background: #ef6338;
+    border: none;
+    padding: 5px;
+    color: #fff;
+    font-weight: bold;
+}
+div._3TtC8T{
+    padding-top: unset !important
+}
 .addDIS {
     margin-bottom: 19px;
 }
