--- a/app-options-page/components/productsList/productsList.html
+++ b/app-options-page/components/productsList/productsList.html
@@ -203,7 +203,7 @@
                     </ul>
                 </p>
             </div>
-            <div class="modal-body" ng-show="!previewInv" ng-style="padding: copy? 'unset': '0 15px'">
+            <div class="modal-body" ng-show="!previewInv" >
                 <div class="row" ng-show="!copy">
                     <div class="col-md-6">
                         <li ng-click="getClassifyOfInvoice($event)" class="productInvoice" ng-repeat="item in selectedProducts"
