--- a/app-options-page/components/productsList/productsList.html
+++ b/app-options-page/components/productsList/productsList.html
@@ -245,7 +245,7 @@
                     </div>
                 </div>
                 <div class="row" ng-show="copy" style="margin: 0px;">
-                    <input type="text" placeholder="Dán list sản phẩm vừa copy..." id="target" contenteditable="true">
+                    <input type="text" autofocus placeholder="Dán list sản phẩm vừa copy..." id="target" contenteditable="true">
                     <!-- </div> -->
                     <div class="general" ng-show="sumPaidCopy > 0">
                         <div class="totalBefore">
