--- a/css/custom.css
+++ b/css/custom.css
@@ -1,7 +1,10 @@
 .popover {
   max-width: 100%;
 }
-
+div.filter-completed-orders div {
+  display: inline-block;
+  padding: 0 10px 10px 0;
+}
 ::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   background-color: #F5F5F5;
