--- a/app-options-page/components/exports/exportsView.html
+++ b/app-options-page/components/exports/exportsView.html
@@ -1,3 +1,3 @@
 
     <img ng-show="loading" id="ordersLoading" src="../../../images/loader.gif" />
-    <div id="grid1" ui-grid="options" ui-grid-selection ui-grid-pagination ui-grid-edit ui-grid-row-edit class="grid"></div>
+    <div id="grid1" ui-grid="options" ui-grid-exporter ui-grid-selection ui-grid-pagination ui-grid-edit ui-grid-row-edit class="grid"></div>
