--- a/css/custom.css
+++ b/css/custom.css
@@ -6,40 +6,57 @@
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   background-color: #F5F5F5;
 }
+
 ul.tasks span {
   display: inline-block;
   padding: 5px 10px;
   margin-right: 5px;
 }
+
 #qrcodeEx img {
   width: unset !important;
   float: right
 }
-.tasks thead th{
+
+.tasks thead th {
   background: #233242;
   color: #fff
 }
+
 span.info {
   background: #8251f5;
   color: #fff;
   border-radius: 4px;
   cursor: pointer;
 }
-p.packer{
+
+div.transaction ul {
+  list-style-type: decimal;
+  padding: 8px;
+  padding-left: 20px;
+  border: #ddd solid 1px;
+  background: #f7f7f7;
+  box-shadow: 2px 8px 17px -4px rgba(0, 0, 0, 0.34);
+}
+
+p.packer {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
   max-width: 50px;
 }
-span.name{
+
+span.name {
   background: #ea5050;
   color: #fff;
   border-radius: 50px;
 }
+
 ul.tasks {
   list-style-type: circle;
   padding-left: 20px;
 }
+
 .selectUser div {
   display: inline-block;
   margin: 20px;
