--- a/app-options-page/components/orders/ordersView.html
+++ b/app-options-page/components/orders/ordersView.html
@@ -61,44 +61,90 @@
     </div>
 </div>
 <div class="modal fade noprint" id="changeBulkStatus" role="dialog">
-    <div class="modal-dialog" style="width: 450px;">
+    <div class="modal-dialog" style="width: 1000px;max-height: 500px;">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                 <h4 class="modal-title">{{BulkChangeStatus.length}} ĐƠN</h4>
             </div>
             <div class="modal-body">
-                <input placeholder="Nhập id để đổi trạng thái" type="text" id="testScan" autofocus>
-                <div id="listChangeSuccess">
-                    <span ng-show="BulkChangeStatus.length > 0">
-                        <input type="checkbox" checked ng-click="toggle($event)" id="checkall" />
-                        <span> Chọn hết</span>
-                        <br />
-                    </span>
-                    <li ng-repeat="i in BulkChangeStatus" id="{{i.id}}" class="success-change">
-                        <input type="checkbox" name="scanId" checked value="{{i.id}}">
-                        <span class="idSuccess">{{i.id}}</span>
-                        <span class="status">({{i.status}})</span>
-                        <span ng-show="i.new_status !== ''" class="new_status"> => ({{i.new_status}})</span>
-                        <span ng-click="removeScan($event)" style="float: right;
-                        margin-right: 10px;
-                        margin-top: 3px;
-                        color: #ca0f0f;
-                        cursor: pointer;"
-                            class="glyphicon glyphicon-remove"></span>
-                    </li>
-                </div>
-                <div class="form-group-status" id="bulkStatus">
-                    <div class="changeStatus">
-                        <input type="radio" ng-model="BulkStatusRadio" style="margin: 4px 5px 22px 15px;" value="NEW">
-                        <b>ĐƠN MỚI</b>
+                <div class="col-md-5">
+                    
+                    <div class="form-group-status" id="bulkStatus">
+                        <div class="changeStatus">
+                            <!-- <input type="radio" ng-model="BulkStatusRadio" style="margin: 4px 0px 22px 10px;" value="NEW">
+                            <b>ĐƠN MỚI</b> -->
 
 
-                        <input type="radio" ng-model="BulkStatusRadio" style="margin: 4px 5px 22px 15px;" value="PACKED">
-                        <b>ĐÃ ĐÓNG GÓI</b>
-                        <button ng-click="createExport()" style="margin-left: 26px;margin-bottom: 15px;border: none;padding: 6px;background: #da3725;color: #fff;border-radius: 3px;">TẠO
-                            PHIẾU XUẤT</button>
+                            <input type="radio" ng-model="BulkStatusRadio" style="margin: 4px 0px 22px 10px;" value="PACKED">
+                            <b>ĐÃ ĐÓNG GÓI</b>
+                            <button ng-click="createExport()" style="margin-left: 12px;margin-bottom: 15px;border: none;padding: 6px;background: #da3725;color: #fff;border-radius: 3px;">TẠO
+                                PHIẾU XUẤT</button>
+                        </div>                        
                     </div>
+                    <div class="report" ng-show="BulkChangeStatus.length > 0">
+                            <li ng-repeat="i in reportBulkScan">
+                                <span>{{i.count}} đơn</span>
+                                <span>{{i.carrier}}</span>
+                            </li>
+                        </div>
+                </div>
+                <div class="col-md-7">
+                    <input placeholder="Nhập id để đổi trạng thái" type="text" id="testScan" autofocus>
+                    <div id="listChangeSuccess" style="overflow: scroll;overflow-x: hidden;">
+                        <!-- <span ng-show="BulkChangeStatus.length > 0">
+                            <input type="checkbox" checked ng-click="toggle($event)" id="checkall" />
+                            <span> Chọn hết</span>
+                            <br />
+                        </span>
+                        <li ng-repeat="i in BulkChangeStatus" id="{{i.id}}" class="success-change">
+                            <input type="checkbox" name="scanId" checked value="{{i.id}}">
+                            <span class="idSuccess">{{i.id}}</span>
+                            <span class="status">[{{i.carrier}}]</span>
+                            <span class="status">({{i.status}})</span>
+                            <span ng-show="i.new_status !== ''" class="new_status"> => ({{i.new_status}})</span>
+                            <span ng-click="removeScan($event)" style="float: right;
+                                margin-right: 10px;
+                                margin-top: 3px;
+                                color: #ca0f0f;
+                                cursor: pointer;"
+                                class="glyphicon glyphicon-remove">
+                            </span>
+                        </li> -->
+                        <table class="table table-bordered" ng-show="BulkChangeStatus.length >0">
+                            <thead style="  background: #000000bd;
+                                            color: #fff;
+                                            border: #673AB7 solid 3px;">
+                                <tr>
+                                    <th>
+                                        <input type="checkbox" checked ng-click="toggle($event)" id="checkall" />
+                                    </th>
+                                    <th>
+                                        Id Đơn
+                                    </th>
+                                    <th>
+                                        Nhà Vận Chuyển
+                                    </th>
+                                    <th>
+                                        TT Hiện Tại
+                                    </th>
+                                    <th>
+                                        TT Mới
+                                    </th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr ng-repeat="i in BulkChangeStatus" id="{{i.id}}">
+                                    <th><input type="checkbox" name="scanId" checked value="{{i.id}}"></th>
+                                    <th>{{i.id}}</th>
+                                    <th>{{i.carrier}}</th>
+                                    <th>{{i.status}}</th>
+                                    <th>{{i.new_status}}</th>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+
                 </div>
 
             </div>
@@ -121,7 +167,7 @@
                 <div class="form-group-status" id="selectUser" style="padding-top: 0">
                     <div class="selectUser">
                         <div ng-repeat="i in users">
-                            <input  type="checkbox" id="{{i.uid}}" style="cursor:pointer">
+                            <input type="checkbox" id="{{i.uid}}" style="cursor:pointer">
                             <span id="name"><b>{{i.name}}</b></span> <br> <span id="email">{{i.email}}</span>
                         </div>
                     </div>
@@ -165,7 +211,7 @@
     <ul ng-repeat="x in rowSelected" class="list-group" style="float: left;width: 50%; margin-bottom: 5px">
         <div style="display: inline-block; margin-right: 10px">
             <div id="{{x.id}}"></div>
-            
+
         </div>
         <div style="display: inline-block">
             <!-- <li class="list-group-item">
@@ -176,7 +222,8 @@
             <br>
             <li style="padding-bottom: 8px; list-style-type : none">
                 {{x.nickname}}
-                <br>{{x.name}}<span style="font-size: 10px">[{{x.lengthClassify}}] <span ng-show="x.packer !== ''">[{{x.packer}}]</span> </span>
+                <br>{{x.name}}<span style="font-size: 10px">[{{x.lengthClassify}}] <span ng-show="x.packer !== ''">[{{x.packer}}]</span>
+                </span>
             </li>
         </div>
 
