--- a/app-options-page/components/productsList/productsList.html
+++ b/app-options-page/components/productsList/productsList.html
@@ -157,9 +157,11 @@
                     <ul class="listDis">
                         <li ng-repeat="i in linkedToShow" id="{{i.id}}" class="disItem">
                             <span class="disName">
+                                    <a target="_blank" href="https://detail.1688.com/offer/{{i.id}}.html"><span class="glyphicon glyphicon-new-window"></span></a>
                                 <input disabled type="text" name="disName" id="" value="{{i.name}}">
+                                
                             </span>
-                            <button ng-click="removeDis($event)" class="removeDis">
+                            <button ng-click="removeDis($event)" class="removeDis">                                    
                                 <span class="glyphicon glyphicon-remove"></span>
                             </button>
                         </li>
@@ -203,7 +205,7 @@
                     </ul>
                 </p>
             </div>
-            <div class="modal-body" ng-show="!previewInv" >
+            <div class="modal-body" ng-show="!previewInv">
                 <div class="row" ng-show="!copy">
                     <div class="col-md-6">
                         <li ng-click="getClassifyOfInvoice($event)" class="productInvoice" ng-repeat="item in selectedProducts"
@@ -245,7 +247,8 @@
                     </div>
                 </div>
                 <div class="row" ng-show="copy" style="margin: 0px;">
-                    <input type="text" autofocus placeholder="Dán list sản phẩm vừa copy..." id="target" contenteditable="true">
+                    <input type="text" autofocus placeholder="Dán list sản phẩm vừa copy..." id="target"
+                        contenteditable="true">
                     <!-- </div> -->
                     <div class="general" ng-show="sumPaidCopy > 0">
                         <div class="totalBefore">
@@ -256,8 +259,8 @@
                             border: #ddd solid 2px;
                             border-radius: 2px;"
                                 placeholder="GIẢM GIÁ" type="number" name="" ng-model="discount" id="">
-                                
-                            </div>
+
+                        </div>
 
                     </div>
                     <div id="previewCopy"></div>
@@ -282,7 +285,7 @@
                         border: #ddd solid 2px;
                         border-radius: 2px;"
                             placeholder="GIẢM GIÁ" type="number" name="" ng-model="discountPre" id="discountPreview">
-                        
+
                     </div>
                 </div>
                 <div class="itemInvoice">
