--- a/app-options-page/components/orders/ordersView.html
+++ b/app-options-page/components/orders/ordersView.html
@@ -16,7 +16,7 @@
 </div>
 <img ng-show="loading" id="ordersLoading" src="../../../images/loader.gif" />
 
-<div id="grid1" ui-grid="options" ui-grid-resize-columns ui-grid-selection ui-grid-exporter ui-grid-cellnav
+<div id="grid1" ui-grid="options" ui-grid-edit ui-grid-resize-columns ui-grid-selection ui-grid-exporter ui-grid-cellnav
     ui-grid-pagination class="grid noprint">
 </div>
 <div class="modal fade noprint" id="myModal" role="dialog">
@@ -164,10 +164,12 @@
                 <button class="btn btn-success" ng-click="updatechiadon()">CHỐT</button>
             </div>
             <div class="modal-body">
-                <div class="form-group-status" id="selectUser" style="padding-top: 0">
+                <div class="form-group-status" id="selectUser" style="padding-top: 0" ng-show="users.length > 0">
+                    <input type="checkbox" name="checkall" id="" ng-model="checkedAll" ng-change="chiadon($event)" >
+                    Chọn hết
                     <div class="selectUser">
                         <div ng-repeat="i in users">
-                            <input type="checkbox" id="{{i.uid}}" ng-change="chiadon()" ng-model="checked" style="cursor:pointer">
+                            <input type="checkbox" id="{{i.uid}}" name="chiadon" ng-change="chiadon($event)" ng-model="checked" style="cursor:pointer">
                             <span id="name"><b>{{i.name}}</b></span> <br> <span id="email">{{i.email}}</span>
                         </div>
                     </div>
