--- a/app-options-page/components/payment/paymentView.html
+++ b/app-options-page/components/payment/paymentView.html
@@ -1,5 +1,5 @@
 <div class="col-md-10">
-    <div id="grid1" ui-grid="gridOptions" ui-grid-edit ui-grid-selection ui-grid-resize-columns ui-grid-exporter ui-grid-pagination class="grid">
+    <div id="grid1" ui-grid="gridOptions" ui-grid-edit ui-grid-selection ui-grid-resize-columns ui-grid-exporter class="grid">
         <div class="grid-msg-overlay" ng-show="!gridOptions.data.length">
             <div class="msg">
                 <div class="center">
