--- a/app-options-page/components/completed-orders/completed-ordersView.html
+++ b/app-options-page/components/completed-orders/completed-ordersView.html
@@ -1,27 +1,14 @@
 <img ng-show="loading" id="ordersLoading" src="../../../images/loader.gif" />
-<!-- <div class="filter-completed-orders">
-    <div>
-        <input type="radio" ng-model="filterOrderStatus" value="0" name="ALL">
-        Tất Cả
-    </div>
-    <div>
-        <input type="radio" ng-model="filterOrderStatus" value="5" name="SHIPPED">
-        Đã Gửi Đi
-    </div>
-    <div>
-        <input type="radio" ng-model="filterOrderStatus" value="6" name="DELIVERED">
-        Khách Đã Nhận
-    </div>
-    <div>
-        <input type="radio" ng-model="filterOrderStatus" value="8" name="RETURNED">
-        Đã Hoàn
-    </div>
-    <div>
-        <input type="radio" ng-model="filterOrderStatus" value="11" name="CANCELED">
-        Đã Hủy
-    </div>
 
+<!-- <div class="action">
+    <button ng-style="{'background': change?'#dff0d8': '#dddddda1'}" class="btn btn-primary" ng-click="ordersDefault()">THANH TOÁN THIẾU</button>
+    <button ng-style="{'background': change==false?'#dff0d8': '#dddddda1'}" ng-click="orderNotPay()" class="btn btn-primary">CHƯA THANH TOÁN</button>
 </div> -->
-
+<!-- <div ng-hide="change == false"> -->
 <div ui-grid="options" ui-grid-resize-columns ui-grid-selection ui-grid-exporter ui-grid-pagination class="grid">
 </div>
+<!-- </div> -->
+<!-- <div ng-show="change == false">
+    <div ui-grid="optionsNotPay" ui-grid-resize-columns ui-grid-selection ui-grid-exporter ui-grid-pagination class="grid grid1">
+    </div>
+</div> -->
