--- a/app-options-page/components/print-ordershopee/printView.html
+++ b/app-options-page/components/print-ordershopee/printView.html
@@ -88,7 +88,7 @@
                 <table class="table table-bordered">
                     <tbody>
                         <tr>
-                            <td></td>
+                            <td> {{payStatus}}</td>
                             <td title="shop bán">
                                 {{shop}}
                             </td>
@@ -121,7 +121,7 @@
 
             <div class="transaction" ng-show="transaction.length > 0 ">
                 <ul>
-                    <li ng-repeat="i in transaction">
+                    <li ng-repeat="i in transaction" title="{{(i.time.seconds * 1000)| date:'medium'}}">
                         {{i.content}}: <b>{{i.value}}</b> (vnđ)
                     </li>
                 </ul>
