--- a/css/custom.css
+++ b/css/custom.css
@@ -98,7 +98,14 @@ div.grid2 {
 span.glyphicon {
   cursor: pointer;
 }
-
+.action button.btn.btn-primary {
+  border-radius: 0;
+  margin-right: 3px;
+  border: none;
+  background: #dddddda1;
+  color: #000;
+  font-weight: bold;
+}
 ::-webkit-scrollbar {
   width: 4px;
   background-color: #F5F5F5;
@@ -130,10 +137,10 @@ td span#last:last-child {
   padding-left: 15px !important
 }
 
-.rowPrint ul:nth-child(1),
+/* .rowPrint ul:nth-child(1),
 .rowPrint ul:nth-child(2) {
   margin-top: 15px
-}
+} */
 
 #dropContainer {
   border: 2px dashed white;
@@ -560,10 +567,10 @@ li.classifyInvoice input[type="number"] {
 }
 
 #selectCurrence {
-  width: 20%;
+  width: 12%;
   display: inline-block;
   height: 30px;
-  padding: 0 25px;
+  padding: 0 10px;
   border: #085a9e4f solid 1px;
 }
 
@@ -613,8 +620,8 @@ li.classifyInvoice p {
 
 input#invoiceTraceno,
 input#invoiceId,
-input#shipping_fee {
-  width: 30%;
+input#shipping_fee,input#discount {
+  width: 25%;
   padding: 4px;
   border: #5cb85c5c solid 1px;
   border-radius: 3px;
@@ -887,7 +894,6 @@ textarea#noteInvoice {
   margin: 15px 1px 15px 0px;
   border: 1px solid rgb(247, 178, 178);
   height: 35px;
-  width: 566px;
 }
 
 /* Mark the steps that are finished and valid: */
